feat(device) detect new brand Hardkernel model: ODROID C2
issue #6451

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18141,6 +18141,12 @@ NorthTech:
   device: 'tablet'
   model: 'TouchPad 10.0"'
 
+# Hardkernel (www.hardkernel.com)
+Hardkernel:
+  regex: 'ODROID(C2)(?:[);/ ]|$)'
+  device: 'peripheral'
+  model: 'ODROID $1'
+
 # Wiseasy (wiseasy.com)
 Wiseasy:
   regex: 'WISENET5(?:[);/ ]|$)'
