feat(device) detect new brand UNIWA model: X5 feat(device) detect brand bq model: Nice (BQ-6045L) feat(device) detect brand Xiaomi model: MI 10T 5G (M2007J3SY) feat(device) detect brand Vinga model: 045 (VMP-045-664) feat(device) detect brand Highscreen model: Boost 3 SE feat(device) detect brand TCL model: 10L (T770H) feat(device) detect brand Bravis model: A401 Neo feat(device) detect brand Vertex model: Lion DC feat(device) detect brand MTC model: Redbox Mini 5 feat(device) detect brand Zopo model: 9XX Quad feat(device) detect brand Digma model: CITI 1508 4G feat(device) detect brand MiXzo model: MX1024 4G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -816,6 +816,8 @@ Bravis:
       model: 'A510 Jeans 4G'
     - regex: 'A509_Jeans'
       model: 'A509 Jeans'
+    - regex: 'BRAVIS NEO'
+      model: 'A401 Neo'
     - regex: 'N1_550_Cruiser'
       model: 'N1-550 Cruiser'
     - regex: 'BRAVIS OMEGA'
@@ -2950,6 +2952,8 @@ bq:
       model: 'Strike Selfie Max'
     - regex: 'BQ(?:ru)?-5503(?:[);/ ]|$)'
       model: 'Nice 2'
+    - regex: 'BQ(?:ru)?-6045L(?:[);/ ]|$)'
+      model: 'Nice'
     - regex: 'BQ(?:ru)?-4030G(?:[);/ ]|$)'
       model: 'Nice Mini'
     - regex: 'BQS-5502(?:[);/ ]|$)'
@@ -4063,7 +4067,7 @@ Digiland:
 
 # Digma
 Digma:
-  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Kids|CITI Octa [178]0|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](606[32]ML|11[459]4MG|1207MG|1210MG|1195MG|1196ML|3001ML|4024PG|500[67]PG|720[48]MG|7113PL|7193MG|820[69]MG|8139ML|8143MG|8152ML|1050PL|8205PG|7203MG|1062ML)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|LINX B510 3G LT5037MG|LINX A452 3G LT4030PG|LINX A453 3G LT4038PG|LINX A420 3G LS4019PG|LINX A450 3G LT4028PG|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|PS1043MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TS7854M|TS1012E 3G|TT1004PG|TT702[045]MG|TT7026MW|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
+  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Kids|CITI Octa [178]0|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](606[32]ML|1114ML|11[459]4MG|1207MG|1210MG|1195MG|1196ML|3001ML|4024PG|500[67]PG|720[48]MG|7113PL|7193MG|820[69]MG|8139ML|8143MG|8152ML|1050PL|8205PG|7203MG|1062ML)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|LINX B510 3G LT5037MG|LINX A452 3G LT4030PG|LINX A453 3G LT4038PG|LINX A420 3G LS4019PG|LINX A450 3G LT4028PG|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|PS1043MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TS7854M|TS1012E 3G|TT1004PG|TT702[045]MG|TT7026MW|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
   device: 'smartphone'
   models:
     - regex: 'HIT(?: 3G)? HT707[10]MG'
@@ -4140,7 +4144,7 @@ Digma:
     - regex: '(CITI 1902 3G|CITI Kids|CITI_8527_4G|CITI Octa [178]0)'
       model: '$1'
       device: 'tablet'
-    - regex: '(CITI[ _](?:[A-Z0-9]+)[ _][34]G)[ _][TC][ST](?:1062ML|1207MG|1210MG|3001ML|500[67]PG|720[48]MG|820[69]MG|11[459]4MG|1195MG|1196ML|3001ML|8152ML|1050PL|7113PL|7193MG|7216MG|8205PG|7203MG|8143MG)'
+    - regex: '(CITI[ _](?:[A-Z0-9]+)[ _][34]G)[ _][TC][ST](?:1062ML|1114ML|1207MG|1210MG|3001ML|500[67]PG|720[48]MG|820[69]MG|11[459]4MG|1195MG|1196ML|3001ML|8152ML|1050PL|7113PL|7193MG|7216MG|8205PG|7203MG|8143MG)'
       model: '$1'
       device: 'tablet'
     - regex: 'iDxD8 3G'
@@ -13331,7 +13335,7 @@ T-Mobile:
 
 # Tcl
 TCL:
-  regex: 'TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T780H|5199I|7040N|5133A|5159[AJ]|5152D)(?:[);/ ]|$)'
+  regex: 'TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T780H|5199I|7040N|5133A|5159[AJ]|5152D|T770H)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
@@ -13354,6 +13358,8 @@ TCL:
       model: 'LX'
     - regex: '5159[AJ](?:[);/ ]|$)'
       model: 'L9'
+    - regex: 'T770H(?:[);/ ]|$)'
+      model: '10L'
 
 # Teclast
 Teclast:
@@ -14679,7 +14685,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006C3(?:L[IGC]|LVG|MN?G)|M2007J1SC|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2006C3MII|M2003J15SC|M2007J3S[CG]|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006C3(?:L[IGC]|LVG|MN?G)|M2007J1SC|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2006C3MII|M2003J15SC|M2007J3S[CYG]|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -14719,7 +14725,7 @@ Xiaomi:
       model: 'MI CC 9'
     - regex: 'Xiaomi_M2001J2E_TD-LTE(?:[);/ ]|$)'
       model: 'MI 10'
-    - regex: 'M2007J3SC(?:[);/ ]|$)'
+    - regex: '[M2007J3S[CY](?:[);/ ]|$)'
       model: 'MI 10T 5G'
     - regex: 'M2007J3SG(?:[);/ ]|$)'
       model: 'MI 10T Pro 5G'
@@ -15586,8 +15592,10 @@ Zopo:
   regex: 'ZOPO|(?:ZOPO[_ ])?(Flash X3|ZP[0-9]{2,}[^/;]+)(?:\)| Build)'
   device: 'smartphone'
   models:
-    - regex: '(ZOPO_C2_MOD|ZP998)(?:[);/ ]|$)'
+    - regex: '(?:ZOPO_C2_MOD|ZP998)(?:[);/ ]|$)'
       model: 'C2 II'
+    - regex: 'ZOPO 9xxQuad(?:[);/ ]|$)'
+      model: '9XX Quad'
     - regex: '(?:ZOPO_)?ZP980[+](?:[);/ ]|$)'
       model: 'ZP980+'
     - regex: '(?:ZOPO_)?ZP980(?:[);/ ]|$)'
@@ -16084,9 +16092,10 @@ Lemhoov:
   models:
     - regex: 'Lemhoov[ _-]([^/;]+) Build'
       model: '$1'
-# MTC
+
+# MTC (MTS)
 MTC:
-  regex: 'MTC[ _](968|97[82]|970|982[OT]?|1078)|(?:MTC[_ ])?SMART[ _]?(?:Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975|Smart_(?:LINE|Light)|MTC[ _]SMART[ _](?:Run|Start_2)'
+  regex: 'MTC[ _](968|97[82]|970|982[OT]?|1078)|(?:MTC[_ ])?SMART[ _]?(?:Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975|Smart_(?:LINE|Light)|MTC[ _]SMART[ _](?:Run|Start_2)|Redbox Mini 5\(MTS\)'
   device: 'smartphone'
   models:
     - regex: 'MTC[ _]?(97[258]|970[H]?|982[OT]?|968)'
@@ -16112,6 +16121,9 @@ MTC:
       model: 'Smart Surf 2 4G'
     - regex: 'SMART[ _]Surf[ _]4G'
       model: 'Smart Surf 4G'
+    - regex: 'Redbox Mini 5\(MTS\)'
+      device: 'tv'
+      model: 'Redbox Mini 5'
 
 # MegaFon
 MegaFon:
@@ -16146,10 +16158,10 @@ Inoi:
 
 # Vertex
 Vertex:
-  regex: 'Lion_Dual|V709X|Tab [43]G (?:7-2|8-1|10-1)|Pro_P3[01]0_4G|Baccara|Eagle[ _]4G|ImpressMAX|Impress[ _]([^;/]+)(?:Build|\))'
+  regex: 'Lion_Dual|V709X|Tab [43]G (?:7-2|8-1|10-1)|Pro_P3[01]0_4G|Lion_DC|Baccara|Eagle[ _]4G|ImpressMAX|Impress[ _]([^;/]+)(?:Build|\))'
   device: 'smartphone'
   models:
-    - regex: '(Lion_Dual|Baccara|Eagle[ _]4G)'
+    - regex: '(Lion_Dual|Lion_DC|Baccara|Eagle[ _]4G)'
       model: '$1'
     - regex: 'ImpressMAX(?:[);/ ]|$)'
       model: 'Impress Max'
@@ -16329,7 +16341,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ]Power|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|FestXL|Tasty|Boost3|Expanse)(?:[);/ ]|$)'
+  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ]Power|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|FestXL|Tasty|Boost3|Boost 3 SE|Expanse)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS])(?:[);/ ]|$)'
@@ -16364,6 +16376,8 @@ Highscreen:
       model: 'Boost 2'
     - regex: 'BOOST IIse(?:[);/ ]|$)'
       model: 'Boost 2 SE'
+    - regex: 'Boost 3 SE(?:[);/ ]|$)'
+      model: 'Boost 3 SE'
     - regex: 'BOOST3(?:[);/ ]|$)'
       model: 'Boost 3'
     - regex: 'Zera-S-Power(?:[);/ ]|$)'
@@ -16527,7 +16541,7 @@ Xoro:
 
 # Vinga
 Vinga:
-  regex: 'VMP-(015-162|021-82|041-162|011-81|025-324)(?:[);/ ]|$)'
+  regex: 'VMP-(015-162|021-82|041-162|011-81|025-324|045-664)(?:[);/ ]|$)'
   device: 'tv'
   models:
     - regex: 'VMP-021-82'
@@ -16538,6 +16552,8 @@ Vinga:
       model: '015'
     - regex: 'VMP-041-162'
       model: '041'
+    - regex: 'VMP-045-664'
+      model: '045'
     - regex: 'VMP-011-81'
       model: '011'
 
@@ -17666,17 +17682,16 @@ Vsmart:
 
 # MiXzo
 MiXzo:
-  regex: '(?:MiXzo[ _])?(?:ME1023|ME1030|MX1037|MX10[24]1)([ _][34]G)?(?:[);/ ]|$)'
+  regex: '(?:MiXzo[ _])?(?:ME1023|ME1030|MX1037|MX1024|MX10[24]1)([ _][34]G)?(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'MiXzo[_ ]ME(1023|1030)(?:[_ ]3G)(?:[);/ ]|$)'
       model: 'ME$1 3G'
     - regex: 'MiXzo[_ ]MX1021(?:[_ ]3G)?(?:[);/ ]|$)'
       model: 'MX1021 3G'
-    - regex: '(?:MiXzo )?MX1041[ _]4G(?:[);/ ]|$)'
-      model: 'MX1041 4G'
-    - regex: '(?:MiXzo )?MX1037[ _]4G(?:[);/ ]|$)'
-      model: 'MX1037 4G'
+
+    - regex: '(?:MiXzo[ _])?MX(1037|1041|1024)[ _]4G(?:[);/ ]|$)'
+      model: 'MX$1 4G'
 
 # Openbox
 Openbox:
@@ -18143,6 +18158,12 @@ NorthTech:
   regex: '(NT-TP10)(?:[);/ ]|$)'
   device: 'tablet'
   model: 'TouchPad 10.0"'
+
+# UNIWA
+UNIWA:
+  regex: 'UNIWA[ _](X5)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # Hardkernel (www.hardkernel.com)
 Hardkernel:
