--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14749,7 +14749,7 @@ Xiaomi:
       model: 'MI CC 9'
     - regex: 'Xiaomi_M2001J2E_TD-LTE(?:[);/ ]|$)'
       model: 'MI 10'
-    - regex: '[M2007J3S[CY](?:[);/ ]|$)'
+    - regex: 'M2007J3S[CY](?:[);/ ]|$)'
       model: 'MI 10T 5G'
     - regex: 'M2007J3SG(?:[);/ ]|$)'
       model: 'MI 10T Pro 5G'
