Adds detection for Ghostery Privacy Browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2615,3 +2615,11 @@
     version: 3.1.0
     engine: Trident
     engine_version: "7.0"
+-
+  user_agent: Mozilla/5.0 (Android 10; Mobile; rv:78.0; Ghostery:3.0) Gecko/78.0 Firefox/78.0
+  client:
+    type: browser
+    name: Ghostery Privacy Browser
+    version: 3.0
+    engine: Gecko
+    engine_version: "78.0"
