--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,11 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Ghostery Privacy Browser (https://play.google.com/store/apps/details?id=com.ghostery.android.ghostery)
+- regex: 'Ghostery:(\d+[\.\d]+)'
+  name: 'Ghostery Privacy Browser'
+  version: '$1'
+
 # Yaani Browser
 - regex: 'Firefox/.*(?:Turkcell-)?YaaniBrowser(?:/(\d+[\.\d]+))?'
   name: 'Yaani Browser'
