Adds detection for PrivacyWall browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2615,3 +2615,11 @@
     version: 3.1.0
     engine: Trident
     engine_version: "7.0"
+-
+  user_agent: Mozilla/5.0 (Android 10; Mobile; rv:70.0) Gecko/70.0 PrivacyWall/70.0a6
+  client:
+    type: browser
+    name: PrivacyWall
+    version: 70.0
+    engine: Gecko
+    engine_version: "70.0"
