--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2623,3 +2623,11 @@
     version: 3.0
     engine: Gecko
     engine_version: "78.0"
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_6_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0.4 Mobile/15E148 Safari/605.1.15 Ghostery
+  client:
+    type: browser
+    name: Ghostery Privacy Browser
+    version: ""
+    engine: WebKit
+    engine_version: "605.1.15"
