--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,8 +5,8 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
-# Ghostery Privacy Browser (https://play.google.com/store/apps/details?id=com.ghostery.android.ghostery)
-- regex: 'Ghostery:(\d+[\.\d]+)'
+# Ghostery Privacy Browser (https://play.google.com/store/apps/details?id=com.ghostery.android.ghostery | https://apps.apple.com/us/app/ghostery-privacy-browser/id472789016)
+- regex: 'Ghostery:?(\d+[\.\d]+)?'
   name: 'Ghostery Privacy Browser'
   version: '$1'
 
