--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2639,4 +2639,11 @@
     version: ""
     engine: WebKit
     engine_version: "605.1.15"
-
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:68.9) Gecko/20100101 Goanna/4.6 Firefox/68.9 Borealis/0.9.7441a1
+  client:
+    type: browser
+    name: Borealis Navigator
+    version: 0.9.7441
+    engine: Goanna
+    engine_version: "4.6"
