--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,11 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Borealis Navigator (https://binaryoutcast.com/projects/borealis/)
+- regex: 'Borealis/(\d+[\.\d]+)'
+  name: 'Borealis Navigator'
+  version: '$1'
+
 # PrivacyWall (https://play.google.com/store/apps/details?id=org.privacywall.browser)
 - regex: 'PrivacyWall/(?:(\d+[\.\d]+))?'
   name: 'PrivacyWall'
