--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2639,4 +2639,11 @@
     version: ""
     engine: WebKit
     engine_version: "605.1.15"
-
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 9; TECNO KC6 Build/PPR1.180610.011) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.125 Mobile Safari/537.36 PHX/6.0
+  client:
+    type: browser
+    name: Phoenix Browser
+    version: "6.0"
+    engine: WebKit
+    engine_version: "537.36"
