feat(device) detect brand X-View models: Amber Kids, Proton Amber HD, Proton Jade 2 Pro feat(device) detect brand Rombica models: Smart Box v003, Smart Box v004, Smart Box v007, Smart Box v008

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11184,6 +11184,8 @@ Rombica:
   models:
     - regex: 'SSQ-A0500(?:[);/ ]|$)'
       model: 'Smart Stick 4K'
+    - regex: 'Rombica Smart Box v(00[3478])(?:[);/ ]|$)'
+      model: 'Smart Box v$1'
     - regex: '(Infinity K8|Smart Box (?:v005|Quad|Ultra HD v002|4K V001))(?:[);/ ]|$)'
       model: '$1'
 
@@ -14689,11 +14691,20 @@ Woxter:
 
 # X-View
 X-View:
-  regex: 'ZEN_U5+'
+  regex: 'ZEN_U5\+|AMBER_KIDS|Proton_Amber_HD|PROTON_JADE_2_PRO'
   device: 'smartphone'
   models:
-    - regex: 'ZEN_U5+'
+    - regex: 'ZEN_U5\+'
       model: 'ZEN U5+'
+    - regex: 'AMBER_KIDS'
+      device: 'tablet'
+      model: 'Amber Kids'
+    - regex: 'Proton_Amber_HD'
+      device: 'tablet'
+      model: 'Proton Amber HD'
+    - regex: 'PROTON_JADE_2_PRO'
+      device: 'tablet'
+      model: 'Proton Jade 2 Pro'
 
 # POCO (sub brand Xiaomi)
 POCO:
