Adds detection for Microsoft Lumia 640 LTE Dual SIM

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -187,6 +187,8 @@ Microsoft:
     - regex: 'RM-106[57]|RM-1096|Lumia 640 XL'
       model: 'Lumia 640 XL'
       device: 'phablet'
+    - regex: 'Lumia 640 LTE Dual SIM'
+      model: 'Lumia 640 LTE Dual SIM'
     - regex: 'RM-1109|RM-1113|RM-107[23467]|Lumia 640'
       model: 'Lumia 640'
     - regex: 'RM-1154|Lumia 650'
