Adds detection for Microsoft Lumia 640 LTE

--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9104,3 +9104,21 @@
     model: Lumia 640 LTE Dual SIM
   os_family: Windows Mobile
   browser_family: Internet Explorer
+- 
+  user_agent: Mozilla/5.0 (Windows Phone 10.0; Android 6.0.1; Microsoft; Lumia 640 LTE) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.116 Mobile Safari/537.36 Edge/15.15063
+  os:
+    name: Windows Phone
+    version: "10.0"
+    platform: ""
+  client:
+    type: browser
+    name: Microsoft Edge
+    version: "15.15063"
+    engine: Edge
+    engine_version: "15.15063"
+  device:
+    type: smartphone
+    brand: Microsoft
+    model: Lumia 640 LTE
+  os_family: Windows Mobile
+  browser_family: Internet Explorer
