--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -189,6 +189,8 @@ Microsoft:
       device: 'phablet'
     - regex: 'Lumia 640 LTE Dual SIM'
       model: 'Lumia 640 LTE Dual SIM'
+    - regex: 'Lumia 640 LTE'
+      model: 'Lumia 640 LTE'
     - regex: 'RM-1109|RM-1113|RM-107[23467]|Lumia 640'
       model: 'Lumia 640'
     - regex: 'RM-1154|Lumia 650'
