Adds detection for Microsoft Lumia 640 XL LTE

--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9140,3 +9140,21 @@
     model: Lumia 640 Dual SIM
   os_family: Windows Mobile
   browser_family: Internet Explorer
+- 
+  user_agent: Mozilla/5.0 (Windows Phone 10.0; Android 6.0.1; Microsoft; Lumia 640 XL LTE) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.79 Mobile Safari/537.36 Edge/14.14393
+  os:
+    name: Windows Phone
+    version: "10.0"
+    platform: ""
+  client:
+    type: browser
+    name: Microsoft Edge
+    version: "14.14393"
+    engine: Edge
+    engine_version: "14.14393"
+  device:
+    type: phablet
+    brand: Microsoft
+    model: Lumia 640 XL LTE
+  os_family: Windows Mobile
+  browser_family: Internet Explorer
