Adds detection for Microsoft Lumia 950 XL Dual SIM

--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9158,3 +9158,21 @@
     model: Lumia 640 XL LTE
   os_family: Windows Mobile
   browser_family: Internet Explorer
+- 
+  user_agent: Mozilla/5.0 (Windows Phone 10.0; Android 8.1; Microsoft; Lumia 950 XL Dual SIM) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.100 Mobile Safari/537.36 Edge/18.17763
+  os:
+    name: Windows Phone
+    version: "10.0"
+    platform: ""
+  client:
+    type: browser
+    name: Microsoft Edge
+    version: "18.17763"
+    engine: Edge
+    engine_version: "18.17763"
+  device:
+    type: phablet
+    brand: Microsoft
+    model: Lumia 950 XL Dual SIM
+  os_family: Windows Mobile
+  browser_family: Internet Explorer
