--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -204,6 +204,9 @@ Microsoft:
       model: 'Lumia 650 SS'
     - regex: 'Lumia 850'
       model: 'Lumia 850'
+    - regex: 'Lumia 950 XL Dual SIM'
+      model: 'Lumia 950 XL Dual SIM'
+      device: 'phablet'
     - regex: 'Lumia 950 XL'
       model: 'Lumia 950 XL'
       device: 'phablet'
