Adds detection for Microsoft Lumia 950 Dual SIM

--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9176,3 +9176,21 @@
     model: Lumia 950 XL Dual SIM
   os_family: Windows Mobile
   browser_family: Internet Explorer
+- 
+  user_agent: Mozilla/5.0 (Windows NT 10.0; ARM; Lumia 950 Dual SIM) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.79 Safari/537.36 Edge/14.14393
+  os:
+    name: Windows
+    version: "10"
+    platform: ARM
+  client:
+    type: browser
+    name: Microsoft Edge
+    version: "14.14393"
+    engine: Edge
+    engine_version: "14.14393"
+  device:
+    type: smartphone
+    brand: Microsoft
+    model: Lumia 950 Dual SIM
+  os_family: Windows
+  browser_family: Internet Explorer
