--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -210,6 +210,8 @@ Microsoft:
     - regex: 'Lumia 950 XL'
       model: 'Lumia 950 XL'
       device: 'phablet'
+    - regex: 'Lumia 950 Dual SIM'
+      model: 'Lumia 950 Dual SIM'
     - regex: 'Lumia 950'
       model: 'Lumia 950'
     - regex: 'RM-994|Lumia 1320'
