Adds detection for Microsoft Lumia 535 Dual SIM

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -176,6 +176,8 @@ Microsoft:
       model: 'Lumia 435'
     - regex: 'RM-1031|Lumia 532'
       model: 'Lumia 532'
+    - regex: 'Lumia 535 Dual SIM'
+      model: 'Lumia 535 Dual SIM'
     - regex: 'RM-109[02]|RM-1089|Lumia 535'
       model: 'Lumia 535'
     - regex: 'RM-1141|Lumia 540'
